--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "td"]
 	path = td
-	url = https://github.com/tdlib/td.git
+	url = https://github.com/YakhontovYaroslav/td.git
 [submodule "tdsharp"]
 	path = tdsharp
 	url = https://github.com/egramtel/tdsharp.git
